--- a/5w/index.html
+++ b/5w/index.html
@@ -65,6 +65,7 @@
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/underscore.min.js"></script>
+	<script type="text/javascript" src="js/parse.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- Analytics -->
 	<script>
